--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hexcolor: ^3.0.1
   webview_flutter: ^4.2.3
   flutter_image: ^4.1.8
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
