--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   webview_flutter: ^4.2.3
   flutter_image: ^4.1.8
   shimmer: ^3.0.0
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
