--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_image: ^4.1.8
   shimmer: ^3.0.0
   animated_text_kit: ^4.2.1
+  desktop_window: ^0.4.0
+  responsive_builder: ^0.7.0
 
 dev_dependencies:
   flutter_test:
